--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
