--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
     "react": "^16.9.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
