--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,20 @@
   "name": "clt_v2",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9000",
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
+    "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.9.0",
+    "react-google-recaptcha": "^2.0.1",
+    "react-google-recaptcha-v3": "^1.4.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
