--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://localhost:9000",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
@@ -11,14 +16,16 @@
     "connected-react-router": "^6.5.2",
     "dotenv": "^8.2.0",
     "history": "^4.10.1",
+    "howler": "^2.1.3",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-awesome-slider": "^4.0.2",
     "react-dom": "^16.9.0",
     "react-google-recaptcha": "^2.0.1",
     "react-google-recaptcha-v3": "^1.4.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.1",
     "react-spring": "^8.0.27",
     "react-wavify": "^1.1.7",
     "recompose": "^0.30.0",
