--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\"  "
   },
   "dependencies": {
+    "clean-css": "^4.2.1",
+    "constantinople": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,6 +22,7 @@
     "pg": "^7.12.1"
   },
   "devDependencies": {
+    "concurrently": "^5.0.2",
     "nodemon": "^1.19.4"
   }
 }
